--- a/homework.html
+++ b/homework.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset = "UTF-8">
     <title> 经营趋势图 </title>
-    <script type="text/javascript" charset="utf-8" src="echarts.js"></script>
-    <script language="javascript" src="homework.js"></script>
+    <script type="text/javascript" charset="utf-8" src="homework.js"></script>
     <link rel="stylesheet" type="text/css" href="homework.css">
 </head>
 <body>
     <div id="name" class="relative">经营趋势图</div>
-    <div id="myChart" ></div>
+    <div id="myChart"  ></div>
 </body>
 </html>
