11月15日float样式和图表修改

--- a/homework.html
+++ b/homework.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset = "UTF-8">
     <title> 经营趋势图 </title>
-    <script type="text/javascript" charset="utf-8" src="homework.js"></script>
     <link rel="stylesheet" type="text/css" href="homework.css">
+    <script type="text/javascript" charset="utf-8" src="echarts.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="homework.js"></script>
 </head>
 <body>
-    <div id="name" class="relative">经营趋势图</div>
+        <div id="blue"></div>
+        <div id="name">经营趋势图</div>
     <div id="myChart"  ></div>
 </body>
 </html>
