12月5日像素问题解决

--- a/homework.html
+++ b/homework.html
@@ -8,14 +8,18 @@
     <script type="text/javascript" charset="utf-8" src="homework.js"></script>
 </head>
 <body>
-    <div id="chartBox">
+    <div id="homework">
         <div id="blue"></div>
-        <div id="yesterday">昨日</div>
-        <div id="week">7天</div>
-        <div id="month">近30天</div>
-        <div id="anyDays"></div>
-        <div id="name">经营趋势图</div>
-        <div id="myChart"  ></div>
+        <div id="chartName">经营趋势图</div>
+        <div id="chartBox">
+            <div id="greenButton"></div>
+            <div id="buttonText">单日实收金额</div>
+            <div id="yesterday">昨日</div>
+            <div id="week">7天</div>
+            <div id="month">近30天</div>
+            <div id="anyDays"></div>
+            <div id="myChart"  ></div>
+        </div>
     </div>
 </body>
 </html>
