12月14日样式修改

--- a/homework.html
+++ b/homework.html
@@ -12,12 +12,18 @@
         <div id="blue"></div>
         <div id="chartName">经营趋势图</div>
         <div id="chartBox">
-            <div id="greenButton"></div>
-            <div id="buttonText">单日实收金额</div>
-            <div id="yesterday">昨日</div>
-            <div id="week">7天</div>
-            <div id="month">近30天</div>
-            <div id="anyDays"></div>
+            <div id="leftItems">
+                <img id="greenButton">
+                <a id="buttonText">单日实收金额</a>
+            </div>
+            <div id="rightItems">
+                <a id="yesterday">昨日</a>
+                <a id="week">7天</a>
+                <a id="month">近30天</a>
+                <div id="anyDays" >
+
+                </div>
+            </div>
             <div id="myChart"  ></div>
         </div>
     </div>
