12月15日早，样式修改

--- a/homework.html
+++ b/homework.html
@@ -21,7 +21,8 @@
                 <a id="week">7天</a>
                 <a id="month">近30天</a>
                 <div id="anyDays" >
-
+                    <div id="dateSelect">2017-11-01—2017-11-09</div>
+                    <img id="anyDays1">
                 </div>
             </div>
             <div id="myChart"  ></div>
