--- a/homework.html
+++ b/homework.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset = "UTF-8">
     <title> 经营趋势图 </title>
-    <link rel="stylesheet" type="text/css" href="homework.css">
-    <script type="text/javascript" charset="utf-8" src="echarts.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="homework.js"></script>
+    <link rel="stylesheet" type="text/css" href="../Test/css/homework.css">
+    <script type="text/javascript" charset="utf-8" src="../Test/js/echarts.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../Test/js/homework.js"></script>
 </head>
 <body>
     <div id="homework">
@@ -13,16 +13,16 @@
         <div id="chartName">经营趋势图</div>
         <div id="chartBox">
             <div id="leftItems">
-                <img id="greenButton">
-                <a id="buttonText">单日实收金额</a>
+                <div id="greenButton"></div>
+                <div id="buttonText">单日实收金额</div>
             </div>
             <div id="rightItems">
-                <a id="yesterday">昨日</a>
-                <a id="week">7天</a>
-                <a id="month">近30天</a>
+                <div id="yesterday">昨日</div>
+                <div id="week">7天</div>
+                <div id="month">近30天</div>
                 <div id="anyDays" >
                     <div id="dateSelect">2017-11-01—2017-11-09</div>
-                    <img id="anyDays1">
+                    <div id="anyDays1"></div>
                 </div>
             </div>
             <div id="myChart"  ></div>
