12月19日，细节修改和类选择器应用

--- a/homework.html
+++ b/homework.html
@@ -17,16 +17,18 @@
                 <div id="buttonText">单日实收金额</div>
             </div>
             <div id="rightItems">
-                <div id="yesterday">昨日</div>
-                <div id="week">7天</div>
-                <div id="month">近30天</div>
-                <div id="anyDays" >
-                    <div id="dateSelect">2017-11-01—2017-11-09</div>
-                    <div id="anyDays1"></div>
+                <div class="yesterday" class="onmouseover">昨日</div>
+                <div class="week" class="onmouseover">7天</div>
+                <div class="month" class="onmouseover">近30天</div>
+                <div class="anyDays" >
+                    <div class="dateSelect">2017-11-01-2017-11-09</div>
+                    <div class="anyDays1"></div>
                 </div>
             </div>
-            <div id="myChart"  ></div>
+            <div id="myChart" ></div>
+            <!---->
         </div>
+
     </div>
 </body>
 </html>
